--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,60 +5,55 @@ body {
     font-family: 'Space Grotesk', sans-serif;
 }
 
-.container {
-    height: 100vh;
-}
-
-.row {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-}
-
-.col-6 {
-    width: 50%;
-}
-
-.col-4 {
-    width: 33.33%;
-}
-
-.col-8 {
-    width: 66.66%;
-    height: 100%;
-}
-
 .bg-main-desktop {
     background-image: url('../images/bg-main-desktop.png');
     background-repeat: no-repeat;
-    background-size: cover;
-    align-items: center;
-    justify-content: center;
-    display: flex;
+    background-size: 33.33%;
 }
 
-.card {
+.container {
+    width: 80%;
+    margin: 0 auto;
+    height: 80%;
+}
+/* .card {
     display: flex;
     flex-direction: column;
     height: inherit;
     width: 100%;
     align-items: center;
 
-}
+} */
 
 .card-front {
     background-image: url('../images/bg-card-front.png');
     background-repeat: no-repeat;
-    height: inherit;
-    display: flex;
-    width: inherit;
-    align-items: center;
+    background-size: inherit;
+    padding: 0;
+    width: 27.9375em;
+    height: 15.3125em;
+    margin-right: 10em;
 }
 
 .card-back {
     background-image: url('../images/bg-card-back.png');
     background-repeat: no-repeat;
-    height: inherit;
-    width: inherit;
+    background-size: inherit;
+    padding: 0;
+    width: 27.9375em;
+    height: 15.3125em;
+}
+
+#dataCard {
+    text-transform: uppercase !important;
+}
+
+form {
+    padding: 5em;
+}
+
+button {
+    background-color: #1B0726 !important;
+    padding: 0.3em;
+    color: #FFF !important;
 }
